Add support for node pool labels
